--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,19 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+dist/
+build/
+node_modules/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.staging.local
+.env.test.local
+.env.production.local
+.env.staging.local
+.env.test.local
+.env.production.local
+.env.staging.local
