chore: Update Dockerfile and package.json to use Node 20 and simplify the build process by removing unnecessary build steps, leveraging tsx for runtime execution.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc -p .",
-    "start": "node dist/server.js",
+    "build": "echo 'No build needed - using tsx'",
+    "start": "tsx src/server.ts",
     "typecheck": "tsc -p . --noEmit"
   },
   "dependencies": {
